# pikurosu

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  Pikurosu.cbp  README.md  package.sh
inc/: args.h  board.h  game.h  hints.h  text.h  util.h  version.h
levels/: test.pikurosu  test2.pikurosu
src/: args.c  board.c  game.c  hints.c  main.c  text.c  util.c
